--- a/template-single/index.html
+++ b/template-single/index.html
@@ -3335,7 +3335,7 @@ function init($, _, locale, Handlebars, apiProject, apiData, Prism, sampleReques
         securityLevel: 'loose',
         flowchart: { 
             curve: 'basis',
-            htmlLabels: false
+            htmlLabels: true
         },
         gantt: { axisFormat: '%m/%d/%Y' },
         sequence: { actorMargin: 50 },
